--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://sirens:LgpKxjvl4XoigXKhCd21yorfKQdimJF3@dpg-curn51bqf0us73fmjjog-a.oregon-postgres.render.com/sirens
+sqlalchemy.url = postgresql://cyber_sirens_jt1i_user:4SxHVerXBjoOGZzRAqt2ed3xGgitKLuV@dpg-cvfgf31opnds73ba6r50-a.oregon-postgres.render.com/cyber_sirens_jt1i
 
 
 [post_write_hooks]
