--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://cyber_sirens_jt1i_user:4SxHVerXBjoOGZzRAqt2ed3xGgitKLuV@dpg-cvfgf31opnds73ba6r50-a.oregon-postgres.render.com/cyber_sirens_jt1i
+sqlalchemy.url = postgresql://cyber_sirens_obea_user:kkt3iNhpYWXA7QlcTWBuDD2vZYjFqDBZ@dpg-cvp8q5odl3ps73fue970-a.oregon-postgres.render.com/cyber_sirens_obea
 
 
 [post_write_hooks]
