--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://cyber_sirens_obea_user:kkt3iNhpYWXA7QlcTWBuDD2vZYjFqDBZ@dpg-cvp8q5odl3ps73fue970-a.oregon-postgres.render.com/cyber_sirens_obea
+sqlalchemy.url = postgresql://cyber_sirens_149d_user:pjp35K4HLrUjGurMQFkdPj0YU6Yc5smm@dpg-d0fkk1c9c44c73begr2g-a.oregon-postgres.render.com/cyber_sirens_149d
 
 
 [post_write_hooks]
